[package]
name = "mini-goldilocks"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "Goldlocks tool library for olavm"
authors = ["contract@olavm.org"]
keywords = ["goldlocks", "ola", "olavm", ]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = { version = "0.4" }
